добавлена аутентификация и фильтрация

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -14,5 +14,11 @@
   "basket.articles": {
     "one": "article",
     "other": "articles"
-  }
+  },
+  "user.login": "Login",
+  "user.logout": "Logout",
+  "usercard.logout": "Logout",
+  "usercard.login": "Login",
+  "userform.login": "Login",
+  "userform.password": "Password"
 }
