--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -16,5 +16,11 @@
     "few": "товара",
     "many": "товаров",
     "other": "товара"
-  }
+  },
+  "user.login": "Вход",
+  "user.logout": "Выход",
+  "usercard.logout": "Выйти",
+  "usercard.login": "Войти",
+  "userform.login": "Логин",
+  "userform.password": "Пароль"
 }
