--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -20,5 +20,10 @@
   "auth.password": "Password",
   "auth.signIn": "Sign in",
   "session.signIn": "Sign In",
-  "session.signOut": "Sign Out"
+  "session.signOut": "Sign Out",
+  "sort.order": "By order",
+  "sort.name": "By name",
+  "sort.expensive": "Expensive first",
+  "sort.older": "Older first",
+  "categories.all": "All"
 }
