--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -22,5 +22,10 @@
   "auth.password": "Пароль",
   "auth.signIn": "Войти",
   "session.signIn": "Вход",
-  "session.signOut": "Выход"
+  "session.signOut": "Выход",
+  "sort.order": "По порядку",
+  "sort.name": "По именованию",
+  "sort.expensive": "Сначала дорогие",
+  "sort.older": "Древние",
+  "categories.all": "Все"
 }
